# BankingRelationshipManagerAssistant

./: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-run.sh  env_template.txt  init_db.sql  pyproject.toml  requirements.txt  setup.py
config/: env_example.txt  settings.yaml
docs/: README.md  SECURITY_GUIDE.md  USAGE_GUIDE.md
examples/: authentication_example.py  basic_usage.py
scripts/: run_api.py  run_streamlit.py  setup_env.py
src/: __init__.py
src/banking_rm_agent/: __init__.py
src/banking_rm_agent/agents/: __init__.py  authentication_agent.py  intent_classifier_agent.py  postgresql_auth_agent.py  query_handler_agent.py
src/banking_rm_agent/core/: __init__.py  banking_rm_agent.py  config.py
src/banking_rm_agent/interfaces/: __init__.py  api_server.py  streamlit_app.py
src/banking_rm_agent/services/: __init__.py  remittance_service.py
src/banking_rm_agent/tools/: __init__.py  banking_tools.py  banking_tools_old.py  banking_tools_updated.py
tests/: __init__.py  test_agent.py  test_authentication.py  test_postgresql_auth.py  test_remittance_service.py  test_updated_banking_tools.py
